# claude-desktop-deepseek-launcher

./: .gitignore  LICENSE  README.md  launch_claude_desktop_deepseek.py  pyproject.toml
.github/workflows/: ci.yml
src/claude_deepseek_launcher/: __init__.py  __main__.py
tests/: test_launcher.py
