[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-desktop-deepseek-launcher"
version = "0.1.0"
description = "Launch Claude Desktop Cowork on 3P with DeepSeek Cloud API."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mahadir Ahmad" }]
keywords = ["claude", "claude-desktop", "deepseek", "cowork", "3p"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mahadirz/claude-desktop-deepseek-launcher"
Issues = "https://github.com/mahadirz/claude-desktop-deepseek-launcher/issues"

[project.scripts]
claude-deepseek-launcher = "claude_deepseek_launcher.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
